--- a/public/404.html
+++ b/public/404.html
@@ -11,7 +11,7 @@
   <body class="status-404">
 <header class="header">
   <nav class="navbar">
-    <div class="navbar-brand">
+    <div class="navbar-brand hidden">
       <a class="navbar-item" href="http://localhost:5252">Brand Docs</a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
