--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <body class="article">
 <header class="header">
   <nav class="navbar">
-    <div class="navbar-brand">
+    <div class="navbar-brand hidden">
       <a class="navbar-item" href="http://localhost:5252">Brand Docs</a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
